<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_heading"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/running_image"
                android:scaleType="centerCrop"
                android:src="@drawable/runningimg" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/running_text"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_heading">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constarint_id_5km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/heading_id_5km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/_5km_text"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/constarint_id_5km" />

                <TextView
                    android:id="@+id/value_id_5km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#3c6e71"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/constarint_id_5km"
                    tools:text="22.04" />

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/date_id_5km"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/constarint_id_5km"
                    app:layout_constraintTop_toBottomOf="@id/value_id_5km"
                    tools:text="12/2/2022" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C6C6C6"

                />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_id_10km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/heading_id_10km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/_10km_text"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/constraint_id_10km" />

                <TextView
                    android:id="@+id/value_id_10km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#3c6e71"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/constraint_id_10km"
                    tools:text="22.04" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:id="@+id/date_id_10km"
                    app:layout_constraintEnd_toEndOf="@id/constraint_id_10km"
                    app:layout_constraintTop_toBottomOf="@id/value_id_10km"
                    tools:text="12/2/2022" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C6C6C6"

                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_id_half_marathon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/heading_id_half_marathon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/half_marathon"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/constraint_id_half_marathon" />

                <TextView
                    android:id="@+id/value_id_half_marathon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#3c6e71"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/constraint_id_half_marathon"
                    tools:text="22.04" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:id="@+id/date_id_half_marathon"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/constraint_id_half_marathon"
                    app:layout_constraintTop_toBottomOf="@id/value_id_half_marathon"
                    tools:text="12/2/2022" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C6C6C6"

                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_id_Marathon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/heading_id_marathon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/full_marathon"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/constraint_id_Marathon" />

                <TextView
                    android:id="@+id/value_id_marathon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#3c6e71"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/constraint_id_Marathon"
                    tools:text="22.04" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:id="@+id/date_id_marathon_id"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/constraint_id_Marathon"
                    app:layout_constraintTop_toBottomOf="@id/value_id_marathon"
                    tools:text="12/2/2022" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C6C6C6"

                />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
